Implement "add project" logic
- Updated the "addProject" method on the ProjectManager Class to prevent
duplicate projects from being added.

- Added a helper function to render newly added projects to the "add new
todo" form. This function will be updated in future commits so that it
can be re-used when the "edit todo" functionality is added.

--- a/src/style.css
+++ b/src/style.css
@@ -182,6 +182,7 @@ select:focus {
   gap: 0.15rem;
 }
 
+select,
 .sidebar .projects-wrapper span,
 .todo .todo-title,
 .todo .todo-description::first-letter {
