--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ textarea {
 a:focus-visible,
 input:focus-visible,
 button:focus-visible,
+dialog button:focus,
 textarea:focus-visible,
 select:focus {
   border-color: var(--secondary-text-clr);
@@ -229,8 +230,17 @@ dialog {
   width: calc(100% - 2rem);
 }
 
-dialog h2 {
+dialog p,
+dialog h2,
+dialog button {
   text-align: center;
+}
+
+dialog p {
+  margin-top: 0.85rem;
+}
+
+dialog h2 {
   text-transform: capitalize;
 }
 
@@ -278,7 +288,6 @@ dialog button {
   background-color: var(--cta-btn-clr);
   color: var(--text-clr);
   font-size: 1.25rem;
-  text-align: center;
 }
 
 dialog button:hover {
