--- a/src/style.css
+++ b/src/style.css
@@ -206,17 +206,28 @@ select:focus {
 
 select,
 .sidebar .projects-wrapper span,
-.todo .todo-title,
+.todo .todo-title::first-letter,
 .todo .todo-description::first-letter {
   text-transform: capitalize;
 }
 
-.todo-due-container {
+.todo-more-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.todo-more-details > div {
+  display: flex;
+  align-items: center;
   margin-left: -2px;
 }
 
-.todo-due-date {
+.todo-more-details p {
   margin: 4px 0 0 4px;
+}
+
+.todo-more-details:last-child {
+  padding-right: 8px;
 }
 
 .todo-description {
@@ -225,6 +236,7 @@ select,
   -webkit-line-clamp: 3;
   overflow: hidden;
   line-clamp: 3;
+  margin-bottom: 3px;
 }
 
 .rotate {
